--- a/discount.html
+++ b/discount.html
@@ -181,8 +181,8 @@
                     <div class="footer-right">
                         <p>contact number</p>
                         <p>contact email@@@@@@@</p>
-                        <img src="images/facebook.png" class="facebook-icon" alt="Facebook">
-                        <img src="images/linkedin.png" class="linkedin-icon" alt="LinkedIn">
+                        <img src="img/facebook.png" class="facebook-icon" alt="Facebook">
+                        <img src="img/linkedin.png" class="linkedin-icon" alt="LinkedIn">
                     </div>
                 </div>
             </div>
