--- a/events.html
+++ b/events.html
@@ -93,23 +93,24 @@
 
     <div class="events-page jumbotron jumbotron-fluid">
         <div class="container">
-            <h1>Fluid jumbotron</h1>
-            <p>This is a modified jumbotron that occupies the entire horizontal space of its parent.</p>
+            <h1>All Stars Sports Bar Events and Competitions</h1>
+            <p>All the Allstars Sports Bars hold regular events and competitions.</p>
         </div>
     </div>
 
 
     <div class="container">
         <div class="main-content-area">
-            <h2>content area</h2>
-            <P>exampletext</P>
+            <h2>Check out the open tournaments aimed at players from all over below</h2>
+            <P>The South West Pool Tour is held at Allstars Sports Bars.
+                There are events for Ladies, Seniors as well as the main Open.</P>
         </div>
     </div>
 
 
     <div class="container">
         <div class="events-section">
-            <h2>Allstars SPORTS Events</h2>
+            <h2>All Stars Sports Events</h2>
 
 
             <div class="container-fluid">
@@ -120,19 +121,21 @@
                         <div class="row">
                             <div class="col-sm-12 col-md-3 col-lg-3">
                                 <p><strong>Pool</strong></p>
-                                <p>example text</p>
+                                <p>Allstars Sports Bar Taunton sponsors the Somerset County Pool Association.
+                                    It is the home venue to Somerset County.
+                                    Multiple competitions held all year round for Men, Ladies, Seniors & Juniors</p>
                             </div>
                             <div class="col-sm-12 col-md-3 col-lg-3">
                                 <p><strong>Snooker</strong></p>
-                                <p>example text</p>
+                                <p>Allstars Taunton provides 3 top class full size snooker tables for hire.</p>
                             </div>
                             <div class="col-sm-12 col-md-3 col-lg-3">
                                 <p><strong>Darts</strong></p>
-                                <p>example text</p>
+                                <p>Allstars has 4 Dart boards with electronic scoreboards</p>
                             </div>
                             <div class="col-sm-12 col-md-3 col-lg-3">
                                 <p><strong>Quizzes & other events</strong></p>
-                                <p>example text<p>
+                                <p>Allstars holds regular quiz nights ask a staff member for more information.<p>
                             </div>
                         </div>
                     </div>
@@ -142,19 +145,20 @@
                         <div class="row">
                             <div class="col-sm-12 col-md-3 col-lg-3">
                                 <p><strong>Pool</strong></p>
-                                <p>example text</p>
+                                <p>Allstars 9 and 8 Ball Money League</p>
                             </div>
                             <div class="col-sm-12 col-md-3 col-lg-3">
                                 <p><strong>Snooker</strong></p>
-                                <p>example text</p>
+                                <p>Allstars Bristol have 3 full size snooker tables and are looking for players to join the Bristol and
+                                    District Billiards and Snooker League</p>
                             </div>
                             <div class="col-sm-12 col-md-3 col-lg-3">
                                 <p><strong>Darts</strong></p>
-                                <p>example text</p>
+                                <p>Allstars are always looking for more darts players to play in the local Darts League</p>
                             </div>
                             <div class="col-sm-12 col-md-3 col-lg-3">
-                                <p><strong>Quizzes & other events</strong></p>
-                                <p>example text</p>
+                                <p><strong>Quizzes and other events</strong></p>
+                                <p>Allstars holds regular quiz nights ask a staff member for more information.</p>
                             </div>
                         </div>
                     </div>
@@ -164,19 +168,26 @@
                         <div class="row">
                             <div class="col-sm-12 col-md-3 col-lg-3">
                                 <p><strong>Pool</strong></p>
-                                <p>example text</p>
+                                <p>Allstars Sports Bar Weston sponsors the Weston Pool League,
+                                    which boasts 7 divisions, over 1000 pool players and is one of the largest leagues in the country.</p>
                             </div>
                             <div class="col-sm-12 col-md-3 col-lg-3">
                                 <p><strong>Snooker</strong></p>
-                                <p>example text</p>
+                                <p>If snooker is more your thing then along with the 3 full size snooker tables in Allstars Weston.
+                                    Allstars membership includes Frames Snooker Centre, Sunnyside Road North, Weston-super-Mare.
+
+                                    Frames has 8 full size snooker tables and has teams in the Weston Snooker League (click here) and
+                                    the Wrington Vale Snooker league.
+
+                                    Frames also run a singles league</p>
                             </div>
                             <div class="col-sm-12 col-md-3 col-lg-3">
-                                <p><strong>Darts</strong></h3>
-                                    <p>example text</p>
+                                <p><strong>Darts</strong></p>
+                                <p>Allstars are always looking for more darts players it has several darts teams in the local Weston Darts League</p>
                             </div>
                             <div class="col-sm-12 col-md-3 col-lg-3">
-                                <p><strong>Quizzes & other events</strong></p>
-                                <p>example text</p>
+                                <p><strong>Quizzes and other events</strong></p>
+                                <p>Allstars holds regular quiz nights ask a staff member for more information.</p>
                             </div>
                         </div>
                     </div>
@@ -186,19 +197,21 @@
                         <div class="row">
                             <div class="col-sm-12 col-md-3 col-lg-3">
                                 <p><strong>Pool</strong></p>
-                                <p>example text</p>
+                                <p>Allstars Sports Bar Exeter sponsors the Devon County Pool Association.
+                                    It is the home venue to Devon County.
+                                    Multiple competitions held all year round for Men, Ladies, Seniors and Junior.</p>
                             </div>
                             <div class="col-sm-12 col-md-3 col-lg-3">
                                 <p><strong>Snooker</strong></p>
-                                <p>example text</p>
+                                <p>Allstars Exeter provides 4 top class full size snooker tables for hire in a private area.</p>
                             </div>
                             <div class="col-sm-12 col-md-3 col-lg-3">
                                 <p><strong>Darts</strong></p>
-                                <p>example text</p>
+                                <p>Allstars has 3 Dart boards with electronic scoreboards</p>
                             </div>
                             <div class="col-sm-12 col-md-3 col-lg-3">
-                                <p><strong>Quizzes & other events</strong></p>
-                                <p>example text</p>
+                                <p><strong>Quizzes and other events</strong></p>
+                                <p>Allstars holds regular quiz nights ask a staff member for more information.</p>
                             </div>
                         </div>
                     </div>
@@ -250,8 +263,8 @@
                     <div class="footer-right">
                         <p>contact number</p>
                         <p>contact email@@@@@@@</p>
-                        <img src="images/facebook.png" class="facebook-icon" alt="Facebook">
-                        <img src="images/linkedin.png" class="linkedin-icon" alt="LinkedIn">
+                        <img src="img/facebook.png" class="facebook-icon" alt="Facebook">
+                        <img src="img/linkedin.png" class="linkedin-icon" alt="LinkedIn">
                     </div>
                 </div>
             </div>
