--- a/index.html
+++ b/index.html
@@ -94,8 +94,8 @@
     <div class="container-fluid">
         <div class="home-page-slider">
             <div class="container">
-                <h1>Fluid jumbotron</h1>
-                <p>This is a modified jumbotron that occupies the entire horizontal space of its parent.</p>
+                <h1>Welcome to All Stars Sports Bar</h1>
+                <p>No.1 for live sports and entertainment</p>
             </div>
 
             <div class="home-page-one">
@@ -117,8 +117,18 @@
 
     <div class="container">
         <div class="main-content-area">
-            <h2>content area</h2>
-            <P>exampletext</P>
+            <h2>Customer Notice</h2>
+            <P>Following the latest Government recommendations
+                Please note: Due to COVID-19 - Allstars venues will be closed until further notice
+                sorry for any inconvenience caused, keep safe everyone.</P>
+        </div>
+             <div class="main-content-area" id="announcement">
+            <h2>Announcement and News</h2>
+            <P>AllStars Bristol are extremely proud to announce that the table used in the 2018 Mosconi Cip now lives with us. This is a Rasson Billiards Victory table covered in Andy 988 cloth. A very special table in a very special place!!
+                everyone is welcome to try it out. <br>
+                Chinese 8-Ball is a cue sport in it’s infancy, but one that has began to catch the global audience’s attention. This table is the same size as an American pool table (9ft x 5ft) but cut with snooker pockets and a napped cloth. America pool balls are used to play the game, which clearly makes the game VERY difficult. Many of the world’s top snooker players have competed in Chinese 8-Ball events worldwide and the verdict has been extremely positive about this new game. <br>
+                Stephen Hendry: “Chinese 8-Ball is on the way to going out to the world. I’m happy to be apart of the process.”<br>
+            </P>
         </div>
     </div>
 
@@ -190,8 +200,8 @@
                         <p>contact number</p>
                         <p>contact email@@@@@@@</p>
 
-                        <img src="images/facebook.png" class="facebook-icon" alt="Facebook">
-                        <img src="images/linkedin.png" class="linkedin-icon" alt="LinkedIn">
+                        <img src="img/facebook.png" class="facebook-icon" alt="Facebook">
+                        <img src="img/linkedin.png" class="linkedin-icon" alt="LinkedIn">
                     </div>
                 </div>
             </div>
