--- a/livesports.html
+++ b/livesports.html
@@ -92,23 +92,23 @@
     <!-- Banner -->
     <div class="livesports-page jumbotron jumbotron-fluid">
         <div class="container">
-            <h1>Fluid jumbotron</h1>
-            <p>This is a modified jumbotron that occupies the entire horizontal space of its parent.</p>
+            <h1>Live Sports</h1>
+            <p>All Stars Live sports events happening</p>
         </div>
     </div>
 
     <!-- content -->
     <div class="container">
         <div class="main-content-area">
-            <h2>content area</h2>
-            <P>exampletext</P>
+            <h2>Choose Your Channel</h2>
+            <P>Don't think you have to watch what everyone else is watching. If you're playing at any of our tables you can request the channel of your choice on your nearest set. Want to watch live Formula One? No problem. Football? You tell us which match and we'll hook your set up.</P>
         </div>
     </div>
 
     <!-- api here -->
     <div class="container-fluid">
         <div class="sports-on">
-            <h2>Live sports on</h2>
+            <h2>Live Sports On</h2>
 
         </div>
     </div>
@@ -171,8 +171,8 @@
                         <div class="footer-right">
                             <p>contact number</p>
                             <p>contact email@@@@@@@</p>
-                            <img src="images/facebook.png" class="facebook-icon" alt="Facebook">
-                            <img src="images/linkedin.png" class="linkedin-icon" alt="LinkedIn">
+                            <img src="img/facebook.png" class="facebook-icon" alt="Facebook">
+                            <img src="img/linkedin.png" class="linkedin-icon" alt="LinkedIn">
                         </div>
                     </div>
                 </div>
