--- a/parties.html
+++ b/parties.html
@@ -93,52 +93,50 @@
 
     <div class="parties-page jumbotron jumbotron-fluid">
         <div class="container">
-            <h1>Fluid jumbotron</h1>
-            <p>This is a modified jumbotron that occupies the entire horizontal space of its parent.</p>
+            <h1>Parties</h1>
+            <p>All Stars Sports Bar parties</p>
         </div>
     </div>
 
 
     <div class="container">
         <div class="main-content-area">
-            <h2>content area</h2>
-            <P>exampletext</P>
+            <h2>Parties and Functions</h2>
+            <P>Look at what each venue can provide!</P>
         </div>
     </div>
 
 
     <div class="container-fluid">
         <div class="party-section-one party-sections">
-            <h3>Ttile will go here</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit,</p>
+            <h3>Party at All Stars Weston-Super-Mare</h3>
+            <p>Although Allstars in Weston-super-Mare doesn't have a function room we can still offer great deals for groups and functions please contact us.</p>
         </div>
     </div>
 
 
     <div class="container-fluid">
         <div class="party-section-two party-sections">
-            <h3>Ttile will go here</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit,</p>
+            <h3>Party at All Stars Taunton</h3>
+            <p>Allstars in Taunton have two function rooms available for hire, please contact us using our enquiry form</p>
+            <p>Room contains 3 pool tables, darts, big screen and 5x 42inch HD TV’s</p>
         </div>
     </div>
 
 
     <div class="container-fluid">
         <div class="party-section-three party-sections">
-            <h3>Ttile will go here</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit,</p>
+            <h3>Party at All Stars Bristol</h3>
+            <p>Although Allstars in Bristol doesn't have a function room it can still offer great deals for groups and functions, please contact us
+                using our enquiry form</p>
         </div>
     </div>
 
 
     <div class="container-fluid">
         <div class="party-section-four party-sections">
-            <h3>Ttile will go here</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit,</p>
+            <h3>Party at All Stars Exeter</h3>
+            <p>Allstars in Exeter have a function room available for hire please contact us using our enquiry form</p>
         </div>
     </div>
 
@@ -184,8 +182,8 @@
                     <div class="footer-right">
                         <p>contact number</p>
                         <p>contact email@@@@@@@</p>
-                        <img src="images/facebook.png" class="facebook-icon" alt="Facebook">
-                        <img src="images/linkedin.png" class="linkedin-icon" alt="LinkedIn">
+                        <img src="img/facebook.png" class="facebook-icon" alt="Facebook">
+                        <img src="img/linkedin.png" class="linkedin-icon" alt="LinkedIn">
                     </div>
                 </div>
             </div>
