--- a/privacy.html
+++ b/privacy.html
@@ -93,26 +93,117 @@
 
     <div class="privacy-page jumbotron jumbotron-fluid">
         <div class="container">
-            <h1>Fluid jumbotron</h1>
-            <p>This is a modified jumbotron that occupies the entire horizontal space of its parent.</p>
+            <h1>Privacy</h1>
+            <p>All Stars Sports Bar respects your privacy.</p>
         </div>
     </div>
 
 
     <div class="container">
         <div class="main-content-area">
-            <h2>content area</h2>
-            <P>exampletext</P>
+            <h2>Privacy Statment</h2>
+            <P>Please read if you need information on how we handle your data.</P>
         </div>
     </div>
 
 
     <div class="container">
         <div class="privacy-content">
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+            <p>Allstars Sports Bars cares about and respects your privacy. For this reason, we collect and use personal data only as it might be needed for us to deliver to you our products, services and websites (collectively, our "Services"). Your personal data includes information such as:
+
+                Name
+                Address
+                Telephone number
+                Date of birth
+                Email address
+                Other data collected that could directly or indirectly identify you
+                Our Privacy Policy is intended to describe to you how and what data we collect, and how and why we use your personal data. It also describes options we provide for you to access, update or otherwise take control of your personal data that we process.
+                If at any time you have questions about our practices or any of your rights described below, you may reach our Data Protection Officer ("DPO") and our dedicated team by contacting us at privacy@allstarssportsbars.co.uk. This inbox is actively monitored and managed so that we can provide you with information you can confidently trust.</p>
+
+            <p>Manage your cookies:
+                Our website uses cookies, which help us to improve our site and enables us to deliver the best possible service and customer experience. By clicking selecting any of these options, you consent your cookies being used for this purpose:</p>
+
+            <p>Analytics:
+
+                Tools that collect anonymous data about how visitors use our site and how it performs. We use this to improve our products, services and user experience.</p>
+
+            <p>Advertising:
+                Anonymous information we collect to help us recommend more relevant products and services for you. Please note, opting out means you'll still see the same amount of ads but they will just be less relevant to you.</p>
+
+            <p>Support:
+                Tools that power interactive services such as remote support and customer feedback.</p>
+
+            <p>Essential:
+                Tools that enable essential services and functionality, including identity verification, service continuity and site security. Opt out is not available.</p>
+
+            <p>What information do we collect?
+                We collect information to provide the best possible experience when you use our Services. Much of what you consider personal data is collected directly from you when you:
+
+                request assistance from our Customer Services team (e.g.: telephone number);
+                complete contact forms or request newsletters or other information from us (e.g.:emails)
+                However, we also collect additional information when delivering our Services to you to ensure necessary and optimal performance. These methods of collection may not be as obvious, so we wanted to explain what these might be (as they vary from time to time) and how they work:
+                Account related information is collected in association with your use of our Services, such as account number, products you have purchased, when products renew or expire, information requests, support requests, and notes or details on our interactions.
+                Cookies and similar technologies on our websites allow us to track your browsing behaviour, links clicked, items purchased, and your device types. They also allow us to collect data (including analytics) about how you use and interact with our Services. This allows us to provide you with more relevant product offerings, a better experience on our sites and mobile applications, and to collect, analyse, and improve the performance of our Services. We may also collect your location via Internet Protocol (IP) address, so that we can personalise our Services. For additional information, and to learn how to manage the technologies we utilise, please see our Cookie Management above.
+                Data about Usage of Services is automatically collected when you use and interact with our Services, including metadata, log files, cookie/device IDs, and location information. This information includes specific data about your interactions with the features, content, and links (including third-parties, such as social media plugins) contained within the Services, IP address, browser type and settings (including configuration and plug-ins), the date and time the Services were used, language preferences and cookie data, and information about devices accessing the Services, including type of device, what operating system is used, device settings, application IDs, unique device identifiers, and error data. Some of this data collected might be capable of and be used to approximate your location.
+                Supplemented Data may be received about you from other sources, including publicly available databases or third parties from whom we have purchased data, in which case we may combine this data with information we already have about you so that we can update, expand, and analyse the accuracy of our records, identify new customers, and provide products and services that may be of interest to you. If you provide us personal information about others, or if others give us your information, we will only use that information for the specific reason for which it was provided to us.</p>
+
+            <p>How we use information.
+                We strongly believe in both reducing the amount of data we collect and limiting the use and purpose of that data to only:
+
+                Data for which we have been given permission
+                Data necessary to deliver the Services you purchase or interact with
+                Data we might be required or permitted to keep for legal compliance or other lawful purposes.
+                These uses include: Delivering, improving, updating, and enhancing the Services we provide to you. We collect information relating to your purchase, use, and/or interactions with our Services. We utilise this information to:
+
+                Improve and optimise the operation and performance of our Services (again, including our websites and mobile applications)
+                Diagnose problems with and identify any security risks, errors, or needed enhancements to the Services
+                Detect and prevent fraud and abuse of our Services and systems
+                Collecting aggregate statistics about use of the Services
+                Understand and analyse how you use our Services and what products and services are most relevant to you.
+                Often, much of the data we collect is aggregated or statistical data about how individuals use our Services, and is not linked to any personal data., But as it is itself personal data, or it can be linked or linkable to personal data, we treat it accordingly.
+                Sharing with trusted third parties. We do not share your date with third party companies
+                Communicating with you. We may contact you directly, regarding products or services you have signed up or purchased from us, such as necessary to deliver transactional or service related communications. We may also contact you with offers for additional services we think you'll find valuable if you give us consent, or where allowed based upon legitimate interests. You don't need to provide consent as a condition to purchase our goods or services. These contacts may include:
+
+                Email
+                Text (SMS) messages
+                Telephone calls
+                If you make use of a service that allows you to import contacts (e.g. using email marketing services to send emails on your behalf), we will only use the contacts and any other personal information needed for the requested service. If you believe that anyone has provided us with your personal information and you would like to request that it be removed from our database, please contact us at privacy@allstarssportsbars.co.uk
+                Compliance with legal, regulatory and law enforcement requests. We cooperate with government and law enforcement officials and private parties to enforce and comply with the law. We will disclose any information about you to government or law enforcement officials or private parties as we, in our sole discretion, believe necessary or appropriate to respond to claims and legal process (such as subpoena requests), to protect our property and rights or the property and rights of a third party, to protect the safety of the public or any person, or to prevent or stop activity we consider to be illegal or unethical.
+                To the extent we are legally permitted to do so, we will take reasonable steps to notify you in the event that we are required to provide your personal information to third parties as part of legal process. We will also share your information to the extent necessary to comply with ICANN or any ccTLD rules, regulations, and policies when you register a domain name with us.
+                Website analytics. We use multiple web analytics tools provided by service partners such as Google Analytics, AdvAna and Convert.com to collect information about how you interact with our website or mobile applications, including what pages you visit, what site you visited prior to visiting our website, how much time you spend on each page, what operating system and web browser you use, and network and IP information. We use the information provided by these tools to improve our Services.
+                These tools place persistent cookies in your browser to identify you as a unique user the next time you visit our website. Each cookie cannot be used by anyone other than the service provider (eg: Facebook and Google for Google Analytics). The information collected from the cookie may be transmitted to and stored by these service partners on servers in a country other than the country in which you reside. Though information collected does not include personal data such as name, address, billing information, etc., the information collected is used and shared by these service providers in accordance with their individual privacy policies.
+                You can control the technologies we use by managing your settings through our Cookie Manager above or the 'cookie banners" that may be presented (depending on URL of website visited) when you first visit our webpages, or by utilising settings in your browser or third-party tools, such as Disconnect, Ghostery and others.
+                Third-party websites. Our website and our mobile applications contain links to third-party websites. We are not responsible for the privacy practices or the content of third-party sites. Please read the privacy policy of any website you visit.</p>
+
+            <p>How you can access, update or delete your data.
+                To easily access, view, update, delete, your personal data please make a request us using the contact us section on our website</p>
+
+            <p>How we secure, store, and retain your data.
+                We follow generally accepted standards to store and protect the personal data we collect, both during transmission and once received and stored, including utilisation of encryption where appropriate.
+                We retain personal data only for as long as necessary to provide the Services you have requested and thereafter for a variety of legitimate legal or business purposes. These might include retention periods:
+
+                mandated by law, contract, or similar obligations applicable to our business operations;
+                for preserving, resolving, defending, or enforcing our legal/contractual rights; or
+                needed to maintain adequate and accurate business and financial records.
+                If you have any questions about the security or retention of your personal data, you can contact us at privacy@allstarssportsbars.co.uk</p>
+
+            <p>'Do Not Track' notifications.
+                Some browsers allow you to automatically notify websites you visit not to track you using a "Do Not Track" signal. There is no consensus among industry participants as to what "Do Not Track" means in this context. Like many websites and online services, we currently do not alter our practices when we receive a "Do Not Track" signal from a visitor's browser. To find out more about "Do Not Track," you may wish to visit www.allaboutdnt.com.</p>
+
+            <p>Age restrictions.
+                Our Services are available for purchase only for those over the age of 16. Our Services are not targeted to, intended to be consumed by or designed to entice individuals under the age of 16. If you know of or have reason to believe anyone under the age of 16 has provided us with any personal data, please contact us.</p>
+
+            <p>Changes in our Privacy Policy.
+                We reserve the right to modify this Privacy Policy at any time. If we decide to change our Privacy Policy, we will post those changes to this Privacy Policy and any other places we deem appropriate, so that you are aware of what information we collect, how we use it, and under what circumstances, if any, we disclose it. If we make material changes to this Privacy Policy, we will notify you here, by email, or by means of a notice on our home page, at least thirty (30) days prior to the implementation of the changes.</p>
+
+            <p>Contact us.
+                If you have any questions, concerns or complaints about our Privacy Policy, our practices, or our Services, you may contact our Office of the DPO by email at privacy@allstarssportsbars.co.uk In the alternative, you may contact us by either of the following means:
+
+                By Mail: Allstars Sports Bars, 12-16 Regent Street, Weston super Mare. BS23 4SQ
+                By Phone: 01934 419 111
+                We will respond to all requests, enquiries or concerns within thirty (30) days.</p>
+
+
         </div>
 
 
@@ -158,8 +249,8 @@
                         <div class="footer-right">
                             <p>contact number</p>
                             <p>contact email@@@@@@@</p>
-                            <img src="images/facebook.png" class="facebook-icon" alt="Facebook">
-                            <img src="images/linkedin.png" class="linkedin-icon" alt="LinkedIn">
+                            <img src="img/facebook.png" class="facebook-icon" alt="Facebook">
+                            <img src="img/linkedin.png" class="linkedin-icon" alt="LinkedIn">
                         </div>
                     </div>
                 </div>
