--- a/food.html
+++ b/food.html
@@ -93,16 +93,25 @@
 
     <div class="food-page jumbotron jumbotron-fluid">
         <div class="container">
-            <h1>Fluid jumbotron</h1>
-            <p>This is a modified jumbotron that occupies the entire horizontal space of its parent.</p>
+            <h1>All Stars Food</h1>
+            <p>All the menus for the All Stars Sports Bar menu</p>
         </div>
     </div>
 
 
     <div class="container">
         <div class="main-content-area">
-            <h2>content area</h2>
-            <P>exampletext</P>
+            <h2>All the Allstars Sports Bars offer a fanastic all day menu</h2>
+            <P>Full range of Deep Pan Pizza's
+
+
+                We're open from 10am till late all week so you can drop by any time. We have fantastic facilities and serve hot and cold food at great prices.
+
+                Families are more than welcome! Live Sport And Dining
+                Why not coincide your meal while watching your favourite sport on one of the many TV's
+                or
+                the giant HD Screens. You can even choose the sport channel you want, just ask at the bar. </P>
+            <P>Menus can be found below</P>
         </div>
     </div>
 
@@ -111,16 +120,16 @@
         <div class="menu-selection">
             <div class="row">
                 <div class="col-sm-12 col-md-3 col-lg-3">
-                    <button>menu 1</button>
+                    <button onclick=" window.open('https://www.allstarssportsbars.co.uk/downloads/menus/MenuBRISTOL.pdf', '_blank'); return false;">Bristol</button>
                 </div>
                 <div class="col-sm-12 col-md-3 col-lg-3">
-                    <button>menu 2</button>
+                    <button onclick=" window.open('https://www.allstarssportsbars.co.uk/downloads/menus/MenuEXETER.pdf', '_blank'); return false;">Exeter</button>
                 </div>
                 <div class="col-sm-12 col-md-3 col-lg-3">
-                    <button>menu 3</button>
+                    <button onclick=" window.open('https://www.allstarssportsbars.co.uk/downloads/menus/MenuTAUNTON.pdf', '_blank'); return false;">Taunton</button>
                 </div>
                 <div class="col-sm-12 col-md-3 col-lg-3">
-                    <button>menu 4</button>
+                    <button onclick=" window.open('https://www.allstarssportsbars.co.uk/downloads/menus/MenuWSM.pdf', '_blank'); return false;">Weston</button>
                 </div>
             </div>
         </div>
@@ -169,8 +178,8 @@
                     <div class="footer-right">
                         <p>contact number</p>
                         <p>contact email@@@@@@@</p>
-                        <img src="images/facebook.png" class="facebook-icon" alt="Facebook">
-                        <img src="images/linkedin.png" class="linkedin-icon" alt="LinkedIn">
+                        <img src="img/facebook.png" class="facebook-icon" alt="Facebook">
+                        <img src="img/linkedin.png" class="linkedin-icon" alt="LinkedIn">
                     </div>
                 </div>
             </div>
